--- a/home.html
+++ b/home.html
@@ -86,29 +86,55 @@ body{
 .input input{flex:1;border:none;background:transparent;outline:none;font-size:15px;color:#071133;}
 .icon-btn{width:44px;height:44px;border-radius:50%;display:flex;align-items:center;justify-content:center;cursor:pointer;border:none;background:transparent;color:var(--primary);font-size:18px;}
 .send{width:48px;height:44px;border-radius:12px;display:flex;align-items:center;justify-content:center;background:linear-gradient(180deg,var(--primary),var(--primary-600));color:white;font-size:18px;border:none;cursor:pointer;box-shadow:0 10px 24px rgba(43,156,255,0.14);}
- .typing-indicator {
+.typing-indicator {
   display: inline-flex;
   align-items: center;
-  background: #fff;
-  color: #071133;
-  padding: 10px 14px;
-  border-radius: 18px;
-  box-shadow: 0 4px 16px rgba(2,6,23,0.06);
-  margin: 4px 0;
-  animation: fadeIn 0.3s ease forwards;
+  gap: 6px;
+  background: #ffffff;
+  color: #0b132b;
+  padding: 8px 12px;
+  border-radius: 16px;
+  box-shadow: 0 2px 10px rgba(11, 19, 43, 0.08);
+  margin: 2px 0;
+  max-width: 85%;
+  animation: fadeInUp 0.25s cubic-bezier(.4,0,.2,1) forwards;
+  transform-origin: bottom;
 }
-.typing-indicator.me { background: var(--primary); color: white; align-self: flex-end; }
+.typing-indicator.me {
+  background: var(--primary, #3b82f6);
+  color: #fff;
+  align-self: flex-end;
+}
+.typing-indicator span.label {
+  font-size: 0.85rem;
+  font-weight: 500;
+  white-space: nowrap;
+}
 .typing-dots {
-  display: flex; gap: 3px; margin-left: 6px;
+  display: flex;
+  gap: 4px;
 }
 .typing-dots span {
-  width: 6px; height: 6px; border-radius: 50%; background: currentColor;
-  animation: blink 1.2s infinite ease-in-out;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background: currentColor;
+  opacity: 0.3;
+  animation: typingBounce 1.2s infinite ease-in-out;
 }
-.typing-dots span:nth-child(2){animation-delay:0.2s;}
-.typing-dots span:nth-child(3){animation-delay:0.4s;}
-@keyframes blink{0%,80%,100%{opacity:0.2;}40%{opacity:1;}}
-@keyframes fadeIn{from{opacity:0;transform:translateY(5px);}to{opacity:1;transform:none;}}
+.typing-dots span:nth-child(2) { animation-delay: 0.15s; }
+.typing-dots span:nth-child(3) { animation-delay: 0.3s; }
+
+@keyframes typingBounce {
+  0%, 80%, 100% { transform: translateY(0); opacity: 0.3; }
+  40% { transform: translateY(-4px); opacity: 1; }
+}
+
+@keyframes fadeInUp {
+  from { opacity: 0; transform: translateY(6px) scale(0.96); }
+  to { opacity: 1; transform: translateY(0) scale(1); }
+}
+
 @media (max-width:900px){
   body{padding:12px;}
   .app{grid-template-columns:1fr;gap:12px;max-width:720px;height:100%;max-height:none;}
@@ -524,6 +550,7 @@ startRealtime()
 </script>  
 </body>
 </html>
+
 
 
 
