--- a/translate.html
+++ b/translate.html
@@ -3,190 +3,204 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Translate Chat</title>
+<title>Chat Translator</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 <style>
 :root {
-  --primary: #2563eb;
-  --bg: #f7f9fc;
-  --me: #2563eb;
-  --bot: #fff;
+  --bg: #f8fafc;
+  --card: #fff;
+  --primary: #3b82f6;
+  --text: #0f172a;
+  --bubble-me: #3b82f6;
+  --bubble-other: #e2e8f0;
 }
 body {
-  margin: 0;
-  font-family: "Segoe UI", sans-serif;
+  font-family: "Poppins", sans-serif;
   background: var(--bg);
+  margin: 0;
+  color: var(--text);
   display: flex;
   flex-direction: column;
-  align-items: center;
   height: 100vh;
+  overflow: hidden;
 }
 header {
-  width: 100%;
   background: var(--primary);
   color: white;
-  padding: 12px 20px;
-  font-size: 18px;
-  font-weight: 600;
+  padding: 14px 20px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+  font-weight: 500;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.1);
 }
-header i { font-size: 20px; }
-
-.container {
-  width: 100%;
-  max-width: 600px;
+header h1 {
+  margin: 0;
+  font-size: 1.1rem;
+}
+input[type="file"] {
+  display: none;
+}
+.upload-label {
+  background: white;
+  color: var(--primary);
+  padding: 8px 14px;
+  border-radius: 8px;
+  font-weight: 500;
+  cursor: pointer;
+  transition: 0.2s;
+}
+.upload-label:hover {
+  background: rgba(255,255,255,0.9);
+  transform: scale(1.03);
+}
+#chatContainer {
   flex: 1;
   overflow-y: auto;
-  padding: 16px;
-  scroll-behavior: smooth;
+  padding: 20px;
+  display: grid;
+  place-items: center;
+}
+#chatContainer.empty::before {
+  content: "Upload a chat.json file to visualize messages";
+  color: #64748b;
+  font-size: 0.95rem;
+}
+.chat-partition {
+  width: 100%;
+  max-width: 600px;
+  background: var(--card);
+  border-radius: 14px;
+  box-shadow: 0 2px 14px rgba(0,0,0,0.06);
+  margin-bottom: 24px;
+  padding: 12px;
+  animation: fadeInUp 0.3s ease;
+}
+.chat-header {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  border-bottom: 1px solid #e2e8f0;
+  padding-bottom: 8px;
+  margin-bottom: 12px;
+}
+.chat-header img {
+  width: 42px;
+  height: 42px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+.chat-header h2 {
+  margin: 0;
+  font-size: 1rem;
+  font-weight: 600;
+}
+.messages {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
 }
 .message {
-  display: inline-block;
-  max-width: 80%;
-  margin: 8px 0;
+  display: inline-flex;
+  align-items: flex-end;
+  max-width: 75%;
   padding: 10px 14px;
-  border-radius: 16px;
-  font-size: 15px;
-  line-height: 1.4;
-  animation: fadeInUp 0.25s ease forwards;
+  border-radius: 18px;
+  word-wrap: break-word;
+  animation: bubblePop 0.3s ease forwards;
 }
 .message.me {
-  background: var(--me);
-  color: white;
   align-self: flex-end;
-  float: right;
+  background: var(--bubble-me);
+  color: white;
   border-bottom-right-radius: 4px;
 }
 .message.other {
-  background: var(--bot);
-  color: #222;
-  float: left;
+  align-self: flex-start;
+  background: var(--bubble-other);
+  color: var(--text);
   border-bottom-left-radius: 4px;
-  box-shadow: 0 2px 10px rgba(0,0,0,0.04);
 }
 @keyframes fadeInUp {
-  from { opacity: 0; transform: translateY(8px) scale(0.98); }
-  to { opacity: 1; transform: translateY(0) scale(1); }
+  from { opacity: 0; transform: translateY(10px); }
+  to { opacity: 1; transform: translateY(0); }
 }
-
-.upload-area {
-  position: fixed;
-  bottom: 24px;
-  right: 24px;
-  background: var(--primary);
-  color: white;
-  border-radius: 50%;
-  width: 60px; height: 60px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-  box-shadow: 0 4px 18px rgba(37,99,235,0.3);
-  animation: floaty 3s ease-in-out infinite;
-  transition: transform 0.2s ease;
+@keyframes bubblePop {
+  from { opacity: 0; transform: scale(0.9); }
+  to { opacity: 1; transform: scale(1); }
 }
-.upload-area:hover { transform: scale(1.05); }
-@keyframes floaty {
-  0%, 100% { transform: translateY(0); }
-  50% { transform: translateY(-6px); }
-}
-
-#fileInput {
-  display: none;
-}
-.loader {
-  position: absolute;
-  top: 50%; left: 50%;
-  transform: translate(-50%,-50%);
-  display: none;
-  flex-direction: column;
-  align-items: center;
-  gap: 10px;
-}
-.loader .spinner {
-  width: 40px;
-  height: 40px;
-  border: 4px solid rgba(0,0,0,0.1);
-  border-top-color: var(--primary);
-  border-radius: 50%;
-  animation: spin 1s linear infinite;
-}
-@keyframes spin {
-  to { transform: rotate(360deg); }
+@media (max-width: 600px) {
+  header h1 { font-size: 1rem; }
+  .chat-partition { margin-bottom: 16px; }
 }
 </style>
 </head>
 <body>
-  <header>
-    <span><i class="fa-solid fa-language"></i> Chat Translator</span>
-    <i class="fa-solid fa-gear"></i>
-  </header>
 
-  <div class="container" id="chatContainer"></div>
-
-  <div class="upload-area" onclick="document.getElementById('fileInput').click()">
-    <i class="fa-solid fa-upload"></i>
-  </div>
-
-  <div class="loader" id="loader">
-    <div class="spinner"></div>
-    <div>Loading chat...</div>
-  </div>
-
+<header>
+  <h1><i class="fa-solid fa-language"></i> Chat Translator</h1>
+  <label for="fileInput" class="upload-label"><i class="fa-solid fa-upload"></i> Upload</label>
   <input type="file" id="fileInput" accept=".json">
+</header>
+
+<div id="chatContainer" class="empty"></div>
 
 <script>
-// File input handling
-const fileInput = document.getElementById("fileInput");
-const chatContainer = document.getElementById("chatContainer");
-const loader = document.getElementById("loader");
+const fileInput = document.getElementById('fileInput');
+const chatContainer = document.getElementById('chatContainer');
 
-fileInput.addEventListener("change", async (e) => {
+fileInput.addEventListener('change', (e) => {
   const file = e.target.files[0];
   if (!file) return;
-  loader.style.display = "flex";
-  chatContainer.innerHTML = "";
-  
-  try {
-    const text = await file.text();
-    const data = JSON.parse(text);
-    displayChat(data);
-  } catch (err) {
-    alert("Invalid chat.json format!");
-  }
-  loader.style.display = "none";
+
+  const reader = new FileReader();
+  reader.onload = (event) => {
+    try {
+      const jsonData = JSON.parse(event.target.result);
+      renderChats(jsonData);
+    } catch {
+      alert("Invalid JSON format. Please upload a valid chat.json file.");
+    }
+  };
+  reader.readAsText(file);
 });
 
-// Display chat
-function displayChat(messages) {
-  chatContainer.innerHTML = "";
-  let lastUser = null;
+function renderChats(data) {
+  chatContainer.classList.remove('empty');
+  chatContainer.innerHTML = '';
 
-  messages.forEach((msg, index) => {
-    const messageEl = document.createElement("div");
-    messageEl.className = "message " + (msg.sender === "me" ? "me" : "other");
-    messageEl.textContent = msg.text || msg.message || "(empty)";
-    messageEl.style.animationDelay = `${index * 0.04}s`;
+  Object.keys(data).forEach((uid, index) => {
+    const userData = data[uid];
+    const profile = userData.profile;
+    const messages = userData.messages;
 
-    // Smooth partition if many users
-    if (lastUser && lastUser !== msg.sender) {
-      const divider = document.createElement("div");
-      divider.style.textAlign = "center";
-      divider.style.margin = "10px 0";
-      divider.style.fontSize = "13px";
-      divider.style.color = "#888";
-      divider.textContent = msg.sender ? `— ${msg.sender} —` : "— New user —";
-      chatContainer.appendChild(divider);
-    }
-    lastUser = msg.sender;
-    chatContainer.appendChild(messageEl);
+    const partition = document.createElement('div');
+    partition.className = 'chat-partition';
+    partition.style.animationDelay = `${index * 0.05}s`;
+    partition.innerHTML = `
+      <div class="chat-header">
+        <img src="${profile.avatar}" alt="${profile.name}">
+        <h2>${profile.name}</h2>
+      </div>
+      <div class="messages"></div>
+    `;
+
+    const messagesDiv = partition.querySelector('.messages');
+    messages.forEach(msg => {
+      const msgDiv = document.createElement('div');
+      msgDiv.className = `message ${msg.me ? 'me' : 'other'}`;
+      msgDiv.textContent = msg.text;
+      messagesDiv.appendChild(msgDiv);
+    });
+
+    chatContainer.appendChild(partition);
   });
 
-  setTimeout(() => chatContainer.scrollTop = chatContainer.scrollHeight, 500);
+  setTimeout(() => {
+    chatContainer.scrollTo({ top: chatContainer.scrollHeight, behavior: 'smooth' });
+  }, 300);
 }
 </script>
+
 </body>
 </html>
