--- a/translate.html
+++ b/translate.html
@@ -138,7 +138,7 @@ input[type="file"] {
 <body>
 
 <header>
-  <h1><i class="fa-solid fa-language"></i> Chat Translator</h1>
+  <h1><i class="fa-solid fa-language"></i>JSON file to Chat Interface</h1>
   <label for="fileInput" class="upload-label"><i class="fa-solid fa-upload"></i> Upload</label>
   <input type="file" id="fileInput" accept=".json">
 </header>
