--- a/home.html
+++ b/home.html
@@ -352,7 +352,6 @@ function appendIncoming(from, text, isImage, ts, id) {
   renderContacts()
   saveToDrive()
 }
-
 attachBtn.onclick = () => {
   const input = document.createElement('input');
   input.type = 'file';
@@ -360,37 +359,45 @@ attachBtn.onclick = () => {
   input.onchange = async e => {
     const f = e.target.files[0];
     if (!f) return;
-    const dataUrl = await resizeImage(f, 800, 800); // max width/height 800px
+    const dataUrl = await resizeAndCompress(f, 400, 400, 0.5); // smaller and more compressed
     sendImageMessage(dataUrl);
   };
   input.click();
 };
 
-// Resize image using canvas
-function resizeImage(file, maxWidth, maxHeight) {
+async function resizeAndCompress(file, maxWidth, maxHeight, quality = 0.5) {
   return new Promise((resolve) => {
     const img = new Image();
     const reader = new FileReader();
-    reader.onload = e => {
-      img.src = e.target.result;
-    };
+    reader.onload = e => img.src = e.target.result;
     img.onload = () => {
       let { width, height } = img;
       if (width > maxWidth || height > maxHeight) {
         const scale = Math.min(maxWidth / width, maxHeight / height);
-        width = width * scale;
-        height = height * scale;
+        width *= scale;
+        height *= scale;
       }
       const canvas = document.createElement('canvas');
       canvas.width = width;
       canvas.height = height;
       const ctx = canvas.getContext('2d');
       ctx.drawImage(img, 0, 0, width, height);
-      resolve(canvas.toDataURL('image/jpeg', 0.7)); // reduce quality too
+
+      // try multiple compress levels if still too big
+      let compressed = canvas.toDataURL('image/jpeg', quality);
+      let sizeKB = Math.round((compressed.length * 3 / 4) / 1024);
+      while (sizeKB > 150 && quality > 0.1) {  // target < 150 KB
+        quality -= 0.1;
+        compressed = canvas.toDataURL('image/jpeg', quality);
+        sizeKB = Math.round((compressed.length * 3 / 4) / 1024);
+      }
+
+      resolve(compressed);
     };
     reader.readAsDataURL(file);
   });
 }
+
 
 function sendImageMessage(dataUrl) {
   if (!currentPeer) return
@@ -576,6 +583,7 @@ startRealtime()
 </script> 
 </body>
 </html>
+
 
 
 
