--- a/translate.html
+++ b/translate.html
@@ -3,27 +3,28 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Chat Translator</title>
+<title>Chat Viewer</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 <style>
 :root {
-  --bg: #f8fafc;
-  --card: #fff;
+  --bg: #f0f4f8;
+  --card: #ffffff;
   --primary: #3b82f6;
-  --text: #0f172a;
+  --text: #1e293b;
   --bubble-me: #3b82f6;
   --bubble-other: #e2e8f0;
+  --shadow: rgba(0,0,0,0.1);
 }
+* { box-sizing: border-box; margin: 0; padding: 0; }
+
 body {
   font-family: "Poppins", sans-serif;
   background: var(--bg);
-  margin: 0;
-  color: var(--text);
   display: flex;
   flex-direction: column;
   height: 100vh;
-  overflow: hidden;
 }
+
 header {
   background: var(--primary);
   color: white;
@@ -32,19 +33,25 @@ header {
   align-items: center;
   justify-content: space-between;
   font-weight: 500;
-  box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+  box-shadow: 0 2px 10px var(--shadow);
+  position: sticky;
+  top: 0;
+  z-index: 10;
 }
+
 header h1 {
-  margin: 0;
-  font-size: 1.1rem;
+  font-size: 1.2rem;
+  display: flex;
+  align-items: center;
+  gap: 8px;
 }
-input[type="file"] {
-  display: none;
-}
+
+input[type="file"] { display: none; }
+
 .upload-label {
   background: white;
   color: var(--primary);
-  padding: 8px 14px;
+  padding: 8px 16px;
   border-radius: 8px;
   font-weight: 500;
   cursor: pointer;
@@ -52,75 +59,111 @@ input[type="file"] {
 }
 .upload-label:hover {
   background: rgba(255,255,255,0.9);
-  transform: scale(1.03);
+  transform: scale(1.05);
 }
+
 #chatContainer {
   flex: 1;
   overflow-y: auto;
   padding: 20px;
-  display: grid;
-  place-items: center;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
+
 #chatContainer.empty::before {
   content: "Upload a chat.json file to visualize messages";
   color: #64748b;
   font-size: 0.95rem;
+  text-align: center;
+  margin-top: 50px;
 }
+
 .chat-partition {
   width: 100%;
   max-width: 600px;
   background: var(--card);
-  border-radius: 14px;
-  box-shadow: 0 2px 14px rgba(0,0,0,0.06);
-  margin-bottom: 24px;
-  padding: 12px;
-  animation: fadeInUp 0.3s ease;
+  border-radius: 16px;
+  box-shadow: 0 4px 20px var(--shadow);
+  padding: 16px;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  animation: fadeInUp 0.4s ease forwards;
 }
+
 .chat-header {
   display: flex;
   align-items: center;
-  gap: 10px;
+  gap: 12px;
   border-bottom: 1px solid #e2e8f0;
   padding-bottom: 8px;
-  margin-bottom: 12px;
 }
+
 .chat-header img {
-  width: 42px;
-  height: 42px;
+  width: 48px;
+  height: 48px;
   border-radius: 50%;
   object-fit: cover;
+  border: 2px solid var(--primary);
+  transition: transform 0.3s;
 }
+.chat-header img:hover { transform: scale(1.1); }
+
 .chat-header h2 {
-  margin: 0;
-  font-size: 1rem;
+  font-size: 1.1rem;
   font-weight: 600;
+  color: var(--text);
 }
+
 .messages {
   display: flex;
   flex-direction: column;
   gap: 8px;
 }
+
 .message {
   display: inline-flex;
   align-items: flex-end;
-  max-width: 75%;
+  max-width: 70%;
   padding: 10px 14px;
   border-radius: 18px;
   word-wrap: break-word;
+  position: relative;
   animation: bubblePop 0.3s ease forwards;
+  transition: transform 0.2s, box-shadow 0.2s;
 }
+
+.message:hover { transform: scale(1.03); box-shadow: 0 4px 15px var(--shadow); }
+
 .message.me {
   align-self: flex-end;
   background: var(--bubble-me);
   color: white;
   border-bottom-right-radius: 4px;
 }
+
 .message.other {
   align-self: flex-start;
   background: var(--bubble-other);
   color: var(--text);
   border-bottom-left-radius: 4px;
 }
+
+.message img {
+  max-width: 200px;
+  max-height: 200px;
+  border-radius: 12px;
+  object-fit: cover;
+  cursor: pointer;
+  transition: transform 0.3s, box-shadow 0.3s;
+}
+
+.message img:hover {
+  transform: scale(1.1);
+  box-shadow: 0 6px 20px var(--shadow);
+}
+
 @keyframes fadeInUp {
   from { opacity: 0; transform: translateY(10px); }
   to { opacity: 1; transform: translateY(0); }
@@ -129,16 +172,18 @@ input[type="file"] {
   from { opacity: 0; transform: scale(0.9); }
   to { opacity: 1; transform: scale(1); }
 }
+
 @media (max-width: 600px) {
   header h1 { font-size: 1rem; }
-  .chat-partition { margin-bottom: 16px; }
+  .chat-partition { padding: 12px; }
+  .message img { max-width: 150px; max-height: 150px; }
 }
 </style>
 </head>
 <body>
 
 <header>
-  <h1><i class="fa-solid fa-language"></i>JSON file to Chat Interface</h1>
+  <h1><i class="fa-solid fa-comments"></i> Chat Viewer</h1>
   <label for="fileInput" class="upload-label"><i class="fa-solid fa-upload"></i> Upload</label>
   <input type="file" id="fileInput" accept=".json">
 </header>
@@ -149,12 +194,12 @@ input[type="file"] {
 const fileInput = document.getElementById('fileInput');
 const chatContainer = document.getElementById('chatContainer');
 
-fileInput.addEventListener('change', (e) => {
+fileInput.addEventListener('change', e => {
   const file = e.target.files[0];
   if (!file) return;
 
   const reader = new FileReader();
-  reader.onload = (event) => {
+  reader.onload = event => {
     try {
       const jsonData = JSON.parse(event.target.result);
       renderChats(jsonData);
@@ -189,7 +234,14 @@ function renderChats(data) {
     messages.forEach(msg => {
       const msgDiv = document.createElement('div');
       msgDiv.className = `message ${msg.me ? 'me' : 'other'}`;
-      msgDiv.textContent = msg.text;
+      if (msg.isImage) {
+        const img = document.createElement('img');
+        img.src = msg.text;
+        img.alt = "Image message";
+        msgDiv.appendChild(img);
+      } else {
+        msgDiv.textContent = msg.text;
+      }
       messagesDiv.appendChild(msgDiv);
     });
 
