--- a/home.html
+++ b/home.html
@@ -232,35 +232,32 @@ const typingIndicators = {}
 
 function showTyping(peerId) {
   if (typingIndicators[peerId]) return;
-
   const d = document.createElement('div');
   d.className = 'typing-indicator';
   d.innerHTML = `
     <span class="label">${chatStore[peerId]?.profile?.name || 'User'} is typing</span>
-    <div class="typing-dots"><span></span><span></span><span></span></div>`;
+    <div class="typing-dots"><span></span><span></span><span></span></div>
+  `;
   d.id = `typing-${peerId}`;
-
   messagesEl.appendChild(d);
   typingIndicators[peerId] = d;
 
-  setTimeout(() => {
-    messagesEl.scrollTo({
-      top: messagesEl.scrollHeight,
-      behavior: 'smooth'
-    });
-  }, 50);
+  requestAnimationFrame(scrollBottom);
 }
-
 
 function hideTyping(peerId) {
-  const el = typingIndicators[peerId]
+  const el = typingIndicators[peerId];
   if (el) {
-    el.style.opacity = 0
-    el.style.transform = "translateY(6px)"
-    setTimeout(() => el.remove(), 250)
-    delete typingIndicators[peerId]
+    el.style.opacity = 0;
+    el.style.transform = "translateY(6px)";
+    setTimeout(() => {
+      el.remove();
+      delete typingIndicators[peerId];
+      scrollBottom();
+    }, 250);
   }
 }
+
 
 function renderContacts(filter = '') {
   contactsEl.innerHTML = ''
@@ -585,4 +582,5 @@ startRealtime()
 </script> 
 </body>
 </html>
+
 
